스플래시 추가 애니메이션 xml 파일 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#4DB5AB</color>
+    <color name="colorAccent">#4db6ac</color>
+    <color name="colorStatusBar">#26a69a</color>
+    <color name="colorTrans">#004db6ac</color>
 </resources>
