버튼 배경 이미지 생성 인트로페이지 작업중

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#4db6ac</color>
     <color name="colorStatusBar">#26a69a</color>
-    <color name="colorTrans">#004db6ac</color>
+    <color name="colorRippleD">#99000000</color>
+    <color name="colorRippleL">#bbffffff</color>
 </resources>
