--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,18 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-    <dimen name="splash_margin">72dp</dimen>
+    <dimen name="splash_margin">84dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="button_height">48dp</dimen>
+
+    <dimen name="element_margin">32dp</dimen>
+
+    <dimen name="label_text">21sp</dimen>
+    <dimen name="large_text">18sp</dimen>
+    <dimen name="default_text">16sp</dimen>
+    <dimen name="sub_text">14sp</dimen>
+    <dimen name="small_text">12sp</dimen>
 </resources>
