인트로 페이지 90퍼센트 완성 터치이펙트 수정 이미지리소스 수정

--- a/app/src/main/res/drawable/corner_fill_clk.xml
+++ b/app/src/main/res/drawable/corner_fill_clk.xml
@@ -8,8 +8,8 @@
 
     <solid android:color="@color/colorRippleL" />
     <corners
-        android:bottomLeftRadius="24dp"
-        android:bottomRightRadius="24dp"
-        android:topLeftRadius="24dp"
-        android:topRightRadius="24dp" />
+        android:bottomLeftRadius="@dimen/button_radius"
+        android:bottomRightRadius="@dimen/button_radius"
+        android:topLeftRadius="@dimen/button_radius"
+        android:topRightRadius="@dimen/button_radius" />
 </shape>
