--- a/app/src/main/res/drawable-v21/selector_border.xml
+++ b/app/src/main/res/drawable-v21/selector_border.xml
@@ -2,4 +2,6 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/colorRippleL">
     <item android:drawable="@drawable/corner_border"/>
+    <item android:id="@android:id/mask"
+        android:drawable="@drawable/corner_fill"/>
 </ripple>
