--- a/app/src/main/res/drawable/corner_border.xml
+++ b/app/src/main/res/drawable/corner_border.xml
@@ -10,8 +10,8 @@
     <stroke android:color="@android:color/white"
         android:width="1dp"/>
     <corners
-        android:bottomLeftRadius="24dp"
-        android:bottomRightRadius="24dp"
-        android:topLeftRadius="24dp"
-        android:topRightRadius="24dp" />
+        android:bottomLeftRadius="@dimen/button_radius"
+        android:bottomRightRadius="@dimen/button_radius"
+        android:topLeftRadius="@dimen/button_radius"
+        android:topRightRadius="@dimen/button_radius" />
 </shape>
