--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,14 +2,18 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-    <dimen name="splash_margin">84dp</dimen>
+    <dimen name="splash_margin">72dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="button_height">48dp</dimen>
+    <dimen name="button_height">44dp</dimen>
+    <dimen name="button_radius">22dp</dimen>
 
     <dimen name="element_margin">32dp</dimen>
+    <dimen name="text_padding">12dp</dimen>
+    <dimen name="main_padding">8dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
 
     <dimen name="label_text">21sp</dimen>
     <dimen name="large_text">18sp</dimen>
