--- a/app/src/main/res/layout/content_main_header.xml
+++ b/app/src/main/res/layout/content_main_header.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="item"
             type="kr.edcan.buspolis.model.BusStop" />
@@ -12,29 +14,112 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="240dp"
-            android:orientation="vertical">
-            <!--TODO 내주변 정류장 , 아래 버튼 두개-->
+            android:layout_height="220dp"
+            android:layout_marginLeft="@dimen/recycler_default_margin"
+            android:layout_marginRight="@dimen/recycler_default_margin"
+            android:layout_marginTop="@dimen/recycler_default_margin"
+            app:cardBackgroundColor="@color/colorAccent"
+            app:cardCornerRadius="@dimen/cardview_radius"
+            app:cardElevation="@dimen/cardview_elevation">
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text='@{item.getName("ko")}' />
+                android:layout_height="match_parent"
+                android:padding="@dimen/cardview_padding">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text='@{item.address}' />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text='@{item.code}' />
-        </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/near_bus_stop"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/small_text"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="@{item.localName}"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/label_text"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{item.address}"
+                        android:textColor="@color/colorTextSub"
+                        android:textSize="@dimen/small_text" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{item.address}"
+                        android:textColor="@color/colorTextSub"
+                        android:textSize="@dimen/small_text" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/circle_white"
+                        android:padding="10dp"
+                        android:src="@drawable/btn_ic_share" />
+
+                    <kr.edcan.buspolis.view.CartaTagView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:paddingLeft="@dimen/cartatagview_defaultpadding"
+                        android:paddingRight="@dimen/cartatagview_defaultpadding"
+                        android:text="@string/more"
+                        app:themeColor="@android:color/white" />
+                </LinearLayout>
+
+                <kr.edcan.buspolis.view.CartaTagView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
+                    android:text='@{item.getName("ko")}'
+                    app:fullMode="true"
+                    app:textThemeColor="@color/colorAccent"
+                    app:textThemeColorEnabled="true"
+                    app:themeColor="@android:color/white" />
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
 
         <TextView
+            android:textSize="@dimen/default_text"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            android:layout_margin="@dimen/cardview_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="SEARCH HISTORY" />
