--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="button_radius">22dp</dimen>
 
     <dimen name="element_margin">32dp</dimen>
+    <dimen name="searchbar_margin">25dp</dimen>
     <dimen name="text_padding">12dp</dimen>
     <dimen name="main_padding">8dp</dimen>
     <dimen name="small_margin">4dp</dimen>
@@ -20,4 +21,10 @@
     <dimen name="default_text">16sp</dimen>
     <dimen name="sub_text">14sp</dimen>
     <dimen name="small_text">12sp</dimen>
+    <dimen name="stroke_width">1dp</dimen>
+    <dimen name="recycler_default_margin">16dp</dimen>
+    <dimen name="cardview_radius">5dp</dimen>
+    <dimen name="cardview_elevation">10dp</dimen>
+    <dimen name="cardview_padding">22dp</dimen>
+    <dimen name="cartatagview_defaultpadding">30dp</dimen>
 </resources>
