--- a/app/src/main/res/layout/content_main_header.xml
+++ b/app/src/main/res/layout/content_main_header.xml
@@ -104,8 +104,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:paddingBottom="5dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     android:paddingTop="5dp"
                     android:text='@{item.getName("ko")}'
                     app:fullMode="true"
@@ -119,7 +119,9 @@
             android:textSize="@dimen/default_text"
             android:textStyle="bold"
             android:textColor="@color/colorAccent"
-            android:layout_margin="@dimen/cardview_padding"
+            android:layout_marginLeft="@dimen/cardview_padding"
+            android:layout_marginTop="@dimen/cardview_padding"
+            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="SEARCH HISTORY" />
