--- a/app/src/main/res/layout/content_main_header.xml
+++ b/app/src/main/res/layout/content_main_header.xml
@@ -16,7 +16,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="180dp"
             android:layout_marginLeft="@dimen/recycler_default_margin"
             android:layout_marginRight="@dimen/recycler_default_margin"
             android:layout_marginTop="@dimen/recycler_default_margin"
@@ -39,7 +39,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/near_bus_stop"
                         android:textColor="@android:color/white"
-                        android:textSize="@dimen/small_text"
+                        android:textSize="@dimen/sub_text"
                         android:textStyle="bold" />
 
                     <TextView
@@ -48,8 +48,7 @@
                         android:layout_marginTop="5dp"
                         android:text="@{item.localName}"
                         android:textColor="@android:color/white"
-                        android:textSize="@dimen/label_text"
-                        android:textStyle="bold" />
+                        android:textSize="36sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -103,11 +102,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:paddingTop="5dp"
-                    android:text='@{item.getName("ko")}'
+                    android:paddingBottom="2dp"
+                    android:paddingLeft="@dimen/text_padding"
+                    android:paddingRight="@dimen/text_padding"
+                    android:paddingTop="2dp"
+                    android:text='@{item.code}'
+                    android:textSize="@dimen/small_text"
+                    android:textStyle="bold"
                     app:fullMode="true"
                     app:textThemeColor="@color/colorAccent"
                     app:textThemeColorEnabled="true"
@@ -116,15 +117,15 @@
         </android.support.v7.widget.CardView>
 
         <TextView
-            android:textSize="@dimen/default_text"
-            android:textStyle="bold"
-            android:textColor="@color/colorAccent"
-            android:layout_marginLeft="@dimen/cardview_padding"
-            android:layout_marginTop="@dimen/cardview_padding"
-            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SEARCH HISTORY" />
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="@dimen/cardview_padding"
+            android:layout_marginTop="@dimen/cardview_padding"
+            android:text="SEARCH HISTORY"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/default_text"
+            android:textStyle="bold" />
         <!--TODO 이거까지 헤더-->
 
     </LinearLayout>
