--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="72dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:background="?attr/selectableItemBackground"
@@ -19,7 +19,7 @@
         <!--@{item.keyword}   쓰면 검색어 ㅇㅇ-->
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="1dp"
             android:background="#10000000" />
 
         <LinearLayout
@@ -32,14 +32,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{item.keyword}"
-                android:textSize="@dimen/default_text"
+                android:textSize="@dimen/label_text"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="asdf"
-                android:textSize="@dimen/small_text" />
+                android:textSize="@dimen/sub_text" />
         </LinearLayout>
 
         <ImageView
