한글 -> 로마자 번역 유틸 추가 메인 헤더에 버튼 추가 사이즈 조정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorRippleD">#99000000</color>
     <color name="colorRippleL">#bbffffff</color>
     <color name="colorTextSub">#DEDEDE</color>
+    <color name="colorShadow">#22222222</color>
 </resources>
