--- a/app/src/main/res/layout/content_main_header.xml
+++ b/app/src/main/res/layout/content_main_header.xml
@@ -81,19 +81,21 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
                         android:background="@drawable/circle_white"
-                        android:padding="10dp"
+                        android:padding="@dimen/main_padding"
                         android:src="@drawable/btn_ic_share" />
 
                     <kr.edcan.buspolis.view.CartaTagView
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="10dp"
+                        android:paddingBottom="@dimen/main_padding"
                         android:paddingLeft="@dimen/cartatagview_defaultpadding"
                         android:paddingRight="@dimen/cartatagview_defaultpadding"
+                        android:paddingTop="@dimen/main_padding"
                         android:text="@string/more"
                         app:themeColor="@android:color/white" />
                 </LinearLayout>
@@ -116,13 +118,75 @@
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:weightSum="2">
+
+            <com.dd.ShadowLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:sl_dy="2dp"
+                app:sl_shadowColor="@color/colorShadow"
+                app:sl_shadowRadius="14dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary">
+
+                    <TextView
+                        android:id="@+id/refreshNear"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:padding="@dimen/main_padding"
+                        android:text="@string/refresh"
+                        android:textSize="@dimen/sub_text" />
+                </RelativeLayout>
+            </com.dd.ShadowLayout>
+
+            <com.dd.ShadowLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:sl_dy="2dp"
+                app:sl_shadowColor="@color/colorShadow"
+                app:sl_shadowRadius="14dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary">
+
+                    <TextView
+                        android:id="@+id/helpNear"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:padding="@dimen/main_padding"
+                        android:text="@string/help"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="@dimen/sub_text" />
+                </RelativeLayout>
+            </com.dd.ShadowLayout>
+        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="@dimen/cardview_padding"
             android:layout_marginTop="@dimen/cardview_padding"
-            android:text="SEARCH HISTORY"
+            android:text="@string/search_history"
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/default_text"
             android:textStyle="bold" />
