검색 내역 리스트 터치범위 수정 롤리팝 이하의 버전에서 권한 페이지 생략 @string/help 오타 수정

--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -11,8 +11,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:background="?attr/selectableItemBackground"
         android:orientation="vertical">
         <!--TODO 검색 기록 부분 아이템-->
