--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="colorRippleL">#bbffffff</color>
     <color name="colorTextSub">#DEDEDE</color>
     <color name="colorShadow">#22222222</color>
+
+    <color name="textLight">#99ffffff</color>
 </resources>
