helpActivity (남들에게 도움요청) 추가

--- a/app/src/main/res/layout/content_main_header.xml
+++ b/app/src/main/res/layout/content_main_header.xml
@@ -92,6 +92,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="10dp"
+                        android:background="@drawable/selector_border"
+                        android:clickable="true"
+                        android:onClick="@{item.helpListener}"
                         android:paddingBottom="@dimen/main_padding"
                         android:paddingLeft="@dimen/cartatagview_defaultpadding"
                         android:paddingRight="@dimen/cartatagview_defaultpadding"
