--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -4,13 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    android:padding="@dimen/activity_horizontal_margin"
     tools:context="kr.edcan.buspolis.HelpActivity">
+
+    <ImageView
+        android:id="@+id/icBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:src="@drawable/ic_back" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/icBack"
         android:orientation="horizontal"
+        android:padding="@dimen/activity_horizontal_margin"
         android:weightSum="4">
 
         <LinearLayout
@@ -19,17 +29,9 @@
             android:layout_weight="3"
             android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:src="@drawable/ic_back" />
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/element_margin"
                 android:text="@string/show_it"
                 android:textColor="@color/textLight"
                 android:textSize="@dimen/default_text" />
@@ -57,4 +59,6 @@
                 android:textSize="@dimen/default_text" />
         </LinearLayout>
     </LinearLayout>
+
+    <!--TODO Information-->
 </RelativeLayout>
