--- a/app/src/main/res/layout/item_settings.xml
+++ b/app/src/main/res/layout/item_settings.xml
@@ -16,6 +16,9 @@
         android:paddingRight="@dimen/activity_horizontal_margin">
 
         <LinearLayout
+            android:paddingTop="@dimen/text_margin"
+            android:paddingBottom="@dimen/text_margin"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -24,7 +27,6 @@
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/text_margin"
                 android:text="@{item.title}"
                 android:textSize="@dimen/label_text" />
 
@@ -32,7 +34,6 @@
                 android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/text_margin"
                 android:text="@{item.content}"
                 android:textColor="@color/colorTextSub"
                 android:textSize="@dimen/small_text" />
