--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorStatusBar">#26a69a</color>
     <color name="colorRippleD">#99000000</color>
     <color name="colorRippleL">#bbffffff</color>
-    <color name="colorTextSub">#DEDEDE</color>
+    <color name="colorTextSub">#bdbdbd</color>
     <color name="colorShadow">#22222222</color>
 
     <color name="textLight">#99ffffff</color>
