BusInfoActivity 추가, 헤더 레이아웃 추가

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="main_padding">8dp</dimen>
     <dimen name="small_margin">4dp</dimen>
 
+    <dimen name="ex_large_text">40sp</dimen>
     <dimen name="label_text">21sp</dimen>
     <dimen name="large_text">18sp</dimen>
     <dimen name="default_text">16sp</dimen>
