--- a/app/src/main/res/layout/activity_bus_info.xml
+++ b/app/src/main/res/layout/activity_bus_info.xml
@@ -1,5 +1,9 @@
 <layout>
-
+    <data>
+        <variable
+            name="item"
+            type="kr.edcan.buspolis.model.RM_Bus"/>
+    </data>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -35,7 +39,6 @@
                     android:id="@+id/busNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="752"
                     android:textColor="@android:color/white"
                     android:textSize="@dimen/ex_large_text"
                     android:textStyle="bold" />
@@ -44,7 +47,6 @@
                     android:id="@+id/busRoute"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="구산동 -> 총신대"
                     android:textColor="@color/textLight"
                     android:textSize="@dimen/large_text"
                     android:textStyle="bold" />
